--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node index.js",
     "doc": "jsdoc -c jsdoc.json",
     "dev": "nodemon index.js"
@@ -18,12 +18,13 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mariadb": "^3.4.0"
+    "mariadb": "^3.4.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
-    "chai": "^5.1.2",
-    "chai-http": "^5.1.1",
+    "chai": "*",
+    "chai-http": "*",
     "jsdoc": "^4.0.4",
-    "mocha": "^10.7.3"
+    "mocha": "*"
   }
 }
