--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mariadb": "^3.4.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "chai": "*",
